--- a/Frontend - admin/package.json
+++ b/Frontend - admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend---admin",
+  "name": "frontendfamiliaruci",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,17 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.23.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-burger-menu": "^3.0.9",
+    "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
+    "@vitejs/plugin-react": "^4.0.4",
+    "eslint": "^8.49.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.9"
   }
 }
