--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,3 +1,7 @@
+Backend/fb-config.json
+fb-config.json
+fb-config
+
 # Logs
 logs
 *.log
@@ -44,6 +48,7 @@ build/Release
 # Dependency directories
 node_modules/
 package-lock.json
+fb-config.json
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -109,3 +114,5 @@ dist
 .tern-port
 
 report.txt
+
+
